[package]
authors = ["Zachary Olkin"]
name = "icm20948_driver"
edition = "2018"
version = "0.2.0"
license = "MIT"
description = "Device agnostic driver for the ICM-20948 IMU (inertial measurement unit)"
repository = "https://github.com/Zolkin1/icm20948_driver"
categories = ["embedded", "no-std", "aerospace::drones"]
keywords = ["device_driver", "IMU", "icm-20948"]

[features]
default = ["defmt"]
defmt = []

[dependencies]
embedded-hal = "0.2.7"
defmt = "0.3.0"
defmt-rtt = "0.3.0"

[dev-dependencies]
cortex-m-rtic = "1.1"
systick-monotonic = "1.0.0"
cortex-m-rt = "0.7.0"
cortex-m = "0.7"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[dev-dependencies.stm32h7xx-hal]
version = "0.12.2"
features = ["stm32h743v", "defmt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
